# mtgServer

cardserver/: .gitignore  Cargo.toml  Readme.md
cardserver/src/: main.rs
cdk/: README.md  package-lock.json
cdk/lib/: cdk-stack.ts
gameserver/: .gitignore  Cargo.toml  Readme.md
gameserver/src/: lambda_handler.rs  lib.rs  main.rs  rds_client.rs
gameserver/tests/: lambda_tests.rs
