[package]
name = "cardserver"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
aws-sdk-s3 = "1.48.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
base64 = "0.21.0"
csv = "1.2"
log = "0.4"


[[bin]]
name = "bootstrap"
path = "src/main.rs"