[package]
name = "gameserver"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-rds = "1.52.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
name = "gameserver"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
